Fixed error when the content was shifting and added modal

--- a/src/github.com/pluralism/clagocerqueira/client/app/static/theme/style.scss
+++ b/src/github.com/pluralism/clagocerqueira/client/app/static/theme/style.scss
@@ -1419,3 +1419,21 @@ body {
 #festividades-grid {
     width: 70%;
 }
+
+
+#associationModal {
+    .modal-body {
+        font-size: 16px;
+        font-weight: 300;
+    }
+}
+
+
+body {
+    padding-right: 0 !important;
+    margin-right: 0 !important;
+
+    &.modal-open {
+        overflow: auto;
+    }
+}
